<resources>
    <string name="app_name">FirstApp</string>
    <string name="hello_world">こんにちは、世界！</string>
    <string name="btnCurrent">現在時刻</string>
    <string name="btnSecondView">SECOND</string>
    <string name="tabItem1">タブ1</string>
    <string name="tabItem2">タブ2</string>
    <string name="tabItem3">タブ3</string>
    <string name="home">ホーム</string>
    <string name="contents1">コンテンツ1</string>
    <string name="contents2">コンテンツ2</string>
    <string name="contents3">コンテンツ3</string>
    <string name="contents4">コンテンツ4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>