<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/contents1"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/contents1" />
    <item
        android:id="@+id/contents2"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/contents2" />
    <item
        android:id="@+id/contents3"
        android:icon="@drawable/ic_baseline_edit_note_24"
        android:title="@string/contents3" />
    <item
        android:id="@+id/contents4"
        android:icon="@drawable/ic_baseline_person_pin_circle_24"
        android:title="@string/contents4" />
</menu>